# rapmat

./: .gitignore  README.md  pyproject.toml  verify_fix.py
.github/workflows/: python-publish.yml
rapmat/: __main__.py  config.py  db_config.py  main.py
rapmat/calculators/: __init__.py  factory.py  mattersim.py  nequip.py  upet.py  vasp.py
rapmat/core/: csp.py  dedup.py  dedup_analysis.py  defect.py  evaluation.py  generation_worker.py  hull.py  phonon.py  phonon_stability.py  relaxation.py  sanity.py
rapmat/storage/: __init__.py  base.py  descriptors.py  surrealdb_store.py
rapmat/tui/: app.py  router.py  state.py  tasks.py
rapmat/tui/screens/: base_results.py  csp_resume.py  csp_search.py  db_settings.py  dedup.py  defect.py  eval.py  home.py  hull.py  phonon.py  results.py  status.py  study_create.py  study_detail.py  study_list.py
rapmat/tui/widgets/: config_grid.py  dialog.py  dropdown.py  form.py  progress.py  status_bar.py  table.py
rapmat/utils/: common.py  console.py  structure.py
tests/: conftest.py  test_checkbox.py  test_db_config_and_locking.py  test_dedup_analysis.py  test_dedup_forces.py  test_dedup_pymatgen.py  test_dedup_soap.py  test_evaluation.py  test_hull.py  test_processing_loop.py  test_relaxation.py  test_render.py  test_sanity.py  test_storage.py  test_tui.py  test_tui_layout.py  test_ui_toggle.py  test_utils.py  test_vasp.py
