[project]
name = "rapmat"
version = "0.1.1"
description = "Rapmat rapid materials discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.27.0",
    "chemparse>=0.3.2",
    "matscipy>=1.2.0",
    "phonopy>=2.47.1",
    "pydantic>=2.12.5",
    "pymatgen>=2025.10.7",
    "pyxtal>=1.1.2",
    "seekpath>=2.2.1",
    "spglib>=2.7.0",
    "urwid>=2.6.0",
    "torch>=2.9.0,<2.10.0",
    "torchvision>=0.24.1",
    "numba>=0.63.1",
    "dscribe==2.1.2",
    "surrealdb>=2.0.0a1",
    "matplotlib>=3.8.0",
    "pytest>=8.0.0",

]

[project.optional-dependencies]
mattersim = ["mattersim>=1.2.0"]
nequip = ["nequip>=0.16.2"]
upet = ["upet"]
all-calculators = ["mattersim>=1.2.0", "nequip>=0.16.2", "upet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rapmat = "rapmat.main:app_main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:spglib.*",
]
