[project]
name = "rapmat"
dynamic = ["version"]
description = "Rapmat - rapid materials discovery using MLIPs and random search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.27.0",
    "chemparse>=0.3.2",
    "matscipy>=1.2.0",
    "phonopy>=2.47.1",
    "pydantic>=2.12.5",
    "pymatgen>=2025.10.7",
    "pyxtal>=1.1.2",
    "seekpath>=2.2.1",
    "spglib>=2.7.0",
    "urwid>=2.6.0",
    "torch>=2.9.0,<2.10.0",
    "torchvision>=0.24.1",
    "numba>=0.63.1",
    "dscribe==2.1.2",
    "surrealdb>=2.0.0a1",
    "matplotlib>=3.8.0",
    "pytest>=8.0.0",
    "platformdirs>=4.9.4",
    "filelock>=3.13.0",
]

license = "GPL-3.0-or-later"
authors = [{ name = "Michael Levenets", email = "milevev256@gmail.com" }]

[project.urls]
Homepage = "https://github.com/milevevvvv/rapmat"

[project.optional-dependencies]
mattersim = ["mattersim>=1.2.0"]
nequip = ["nequip>=0.16.2"]
upet = ["upet>=0.2.1"]
all-calculators = ["mattersim>=1.2.0", "nequip>=0.16.2", "upet>=0.2.1"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
rapmat = "rapmat.main:app_main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:spglib.*",
]